module(
    name = "rules_ros",
    bazel_compatibility = [">=7.4.1"],
)

bazel_dep(name = "rules_cc", version = "0.2.2")

# Python
bazel_dep(name = "rules_python", version = "1.5.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.10.12",
)
use_repo(python, "python_3_10")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "python_deps",
    python_version = "3.10.12",
    requirements_lock = "@rules_ros//thirdparty/python:requirements_lock.txt",
)
use_repo(pip, "python_deps")

bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "libyaml", version = "0.2.5")

# currently only humble is supported, until new lock file format is introduced
ros2_config = use_extension("@rules_ros//repos/config:extensions.bzl", "ros2_config")
ros2_config.config(
    name = "ros2_config",
    distro = "humble",
)
use_repo(ros2_config, "ros2_config")

ros_repos = use_extension("//repos/config:extensions/humble.bzl", "ros_repos")
use_repo(
    ros_repos,
    "ament.ament_index",
    "eProsima.Fast-CDR",
    "eProsima.Fast-DDS",
    "eProsima.foonathan_memory_vendor",
    "eclipse-cyclonedds.cyclonedds",
    "eclipse-iceoryx.iceoryx",
    "ros-tooling.libstatistics_collector",
    "ros2.common_interfaces",
    "ros2.rcl",
    "ros2.rcl_interfaces",
    "ros2.rcl_logging",
    "ros2.rclcpp",
    "ros2.rcpputils",
    "ros2.rcutils",
    "ros2.rmw",
    "ros2.ros2_tracing",
    "ros2.ros2cli",
    "ros2.rosidl",
    "ros2.rosidl_dds",
    "ros2.rosidl_typesupport",
)
