cc_library(
    name = "rcl",
    srcs = glob([
        "src/**/*.c",
        "src/**/*.h",
    ]),
    hdrs = glob(["include/**/*.h"]),
    strip_include_prefix = "include",
    deps = [
        "@ros2.rcutils//:rcutils",
        "@ros2.rmw//rmw",
        "@ros2.rosidl//rosidl_runtime_c",
        "@ros2.ros2_tracing//tracetools",
        "//rcl_yaml_param_parser",
        "@ros2.rcl_logging//rcl_logging_interface",
        "@ros2.rcl_interfaces//rcl_interfaces",
    ],
    local_defines = ["ROS_PACKAGE_NAME=\\\"rcl\\\""],
    visibility = ["//visibility:public"],
)

