load("@bazel_skylib//rules:expand_template.bzl","expand_template")

cc_library(
    name = "tracetools",
    srcs = [
        "src/tracetools.c",
        "src/utils.cpp",
    ],
    hdrs = [
        "include/tracetools/tracetools.h",
        "include/tracetools/utils.hpp",
        "include/tracetools/visibility_control.hpp",
        ":config",
    ],
    strip_include_prefix = "include",
    deps = ["@ros2.rcutils//:rcutils"],
    visibility = ["//visibility:public"],
)

# ToDo: config not yet fully implemented
expand_template(
    name = "config",
    out = "include/tracetools/config.h",
    substitutions = {
        "#cmakedefine TRACETOOLS_DISABLED": "#define TRACETOOLS_DISABLED 1",
        "#cmakedefine TRACETOOLS_LTTNG_ENABLED": ""
    },
    template = "include/tracetools/config.h.in",
)


