# Copyright 2024 Apex.AI, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@python_deps//:requirements.bzl", "requirement")
load("@ros2_config//:repos_lock_file.bzl", "REPOS_LOCK_FILE")
load("@ros2_config//:repos_setup_file.bzl", "REPOS_SETUP_FILE")
load("@ros2_config//:repos_overlay_files.bzl", "REPOS_OVERLAY_FILES")

py_binary(
    name = "repos_lock.update",
    srcs = ["lock_repos.py"],
    main = "lock_repos.py",
    data = ["generate_ros2_config.py", "@ros2//:ros2.repos", REPOS_LOCK_FILE, REPOS_SETUP_FILE] + REPOS_OVERLAY_FILES,
    args = [
        "$(execpath @ros2//:ros2.repos)",
        "$(execpath {})".format(REPOS_LOCK_FILE),
        "$(execpath {})".format(REPOS_SETUP_FILE),
    ] + ["$(execpath {})".format(f) for f in REPOS_OVERLAY_FILES],
    deps = [requirement("pyyaml")],
    visibility = ["//visibility:public"],
)
