# Copyright 2024 Apex.AI, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@python_deps//:requirements.bzl", "requirement")
load("@ros2_config//:repos_index_file.bzl", "REPOS_INDEX_FILE")
load("@ros2_config//:repos_overlay_files.bzl", "REPOS_OVERLAY_FILES")
load("@ros2_config//:repos_setup_file.bzl", "REPOS_SETUP_FILE")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "repos_lock.update",
    srcs = [
        "generate_ros2_config.py",
        "lock_repos.py",
    ],
    args = [
        "$(execpath {})".format(REPOS_INDEX_FILE),
        "$(execpath {})".format(REPOS_SETUP_FILE),
    ] + ["$(execpath {})".format(f) for f in REPOS_OVERLAY_FILES],
    data = [
        REPOS_INDEX_FILE,
        REPOS_SETUP_FILE,
    ] + REPOS_OVERLAY_FILES,
    main = "lock_repos.py",
    visibility = ["//visibility:public"],
    deps = [requirement("pyyaml")],
)
